--- a/SixProject/Views/Department/Index.cshtml
+++ b/SixProject/Views/Department/Index.cshtml
@@ -26,7 +26,10 @@
                         <td>@Html.DisplayFor(x=>item.DepartmentName)</td>
                         <td>
                             <a asp-action="Edit" asp-controller="Department" asp-route-id="@item.DepartmentID" class="btn btn-outline-info">
-                                <i class="fa fa-pencil-square-o"></i>
+                                <i class="fa fa-pencil-square-o"></i> Edit
+                            </a> <icon class="fa fa-square text-primary"></icon>
+                            <a asp-action="Delete" asp-controller="Department" asp-route-id="@item.DepartmentID" class="btn btn-outline-danger">
+                                <i class="fa fa-trash"></i> Delete
                             </a>
                         </td>
                     </tr>
